<resources>
    <string name="app_name">ShoeStore</string>
    <string name="sign_in">Sign in</string>
    <string name="email_hint">name@example.com</string>
    <string name="password_hint">password</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_text">Welcome to the shoe store app!</string>
    <string name="continue_text">Continue</string>
    <string name="instructions_go_here">Instructions go here..........</string>
    <string name="shoe_store">Shoe Store</string>
    <string name="see_our_shoes">See our shoes</string>
    <string name="temp_profile_summary">Shoe X: summary profile here</string>
    <string name="add_new_shoe">Add new shoe</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="example_name">Leather ankle boots</string>
    <string name="example_company">Hyde Shoes</string>
    <string name="shoe_size">Shoe size</string>
    <string name="description">Description</string>
    <string name="description_example">Description...</string>
    <string name="size">Size:</string>
    <string name="logout">Logout</string>
</resources>
